# tmux-applets

./: Cargo.toml  Makefile  README  README.md  rustfmt.toml  tmux-cpu-freq.c  tmux-mem.c  tmux-ping.c
.github/workflows/: ci-build.yaml
src/: common.rs  cpu.rs  lib.rs  main.rs  mem.rs  ping.rs
